src/conferences/nodeconf/sass/components/_speakers.sass
.s-speakers
  position: relative
  padding: clamp(50px, 5vw, 100px) 0

  &:before
    content: ''
    position: absolute
    left: 0
    top: 0
    right: 0
    bottom: 0
    background: $themeColor
    clip-path: polygon(100% 0%, 100% calc(0% + 200px), calc(0% + 476px) calc(100% - 50px), 0% calc(100% - 50px), 0 calc(100% - 170px), calc(0% + 420px) calc(100% - 170px))
    opacity: 0.4
    z-index: 0

  &:after
    content: ''
    position: absolute
    left: 0
    top: 0
    right: 0
    bottom: 0
    background: $mainBg
    clip-path: polygon(calc(100% + 1px) calc(0% + 1px), calc(100% - 1px) calc(0% + 199px), calc(0% + 475px) calc(100% - 51px), calc(0% - 1px) calc(100% - 51px), calc(0% - 1px) calc(100% - 169px), calc(0% + 421px) calc(100% - 169px))
    z-index: 0

  +sm
    padding-top: 54px
    padding-bottom: 50px
  &_pt-sm
    padding-top: 94px
    +laptop
      padding: 80px 0 10px
  &.no-tags
    .speaker__tag
      display: none

  &_center
    .speakers-list
      justify-content: center
      +xs
        justify-content: flex-start

  +laptop
    padding: 80px 0 10px

    .speakers-list
      &__item
        &:last-child
          +xs
            margin-bottom: 30px
  &__btn
    max-width: 283px
    margin: 0 auto

.speakers-list
  position: relative
  display: flex
  flex-wrap: wrap
  margin: 0 auto
  justify-content: center
  z-index: 1
  display: grid
  grid-template-columns: repeat(4, 1fr)
  gap: 50px 30px
  max-width: 1370px

  +laptop
    gap: 40px 20px

  +tablet
    grid-template-columns: repeat(3, 1fr)

  +sm
    grid-template-columns: repeat(2, 1fr)
    gap: 20px 10px

  +xxs
    grid-template-columns: repeat(1, 1fr)

  &__item
    padding: 0

    &_cfp
      position: relative
      padding: 24px
      z-index: 1
      display: flex
      flex-direction: column

      +xs
        padding: 30px 30px
        padding-top: 40px

      &:before
        content: ''
        position: absolute
        left: 0
        top: 0
        right: 0
        bottom: 0
        background: $themeColor
        transition: all ease 0.2s
        clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 36px, calc(100% - 36px) 0%)
        opacity: 0.4
        z-index: -1

      &:after
        content: ''
        position: absolute
        left: 0
        top: 0
        right: 0
        bottom: 0
        background: #121310
        transition: all ease 0.2s
        clip-path: polygon(1px 1px, 1px calc(100% - 1px), calc(100% - 1px) calc(100% - 1px), calc(100% - 1px) 36px, calc(100% - 36px) 1px)
        z-index: -1

      .speaker

        &__name
          font-weight: 800
          font-size: clamp(32px, 4.6vw, 48px)
          text-transform: uppercase
          color: $themeColor
          span
            display: block
            font-size: 16px
            margin: 4px 0 0

        &__company
          font-size: 16px
          margin: 50px 0 20px
          font-weight: 500
          color: $white
          text-transform: uppercase

          a
            color: $white

      .btn
        @extend .btn--border
        @extend .btn--small
        margin: auto 0 0 auto

.speaker
  position: relative
  padding: 20px
  height: 100%
  clip-path: polygon(0% 0%, 0% calc(100% - 36px), calc(0% + 36px) 100%, 100% 100%, 100% 36px, calc(100% - 36px) 0%)

  +sm
    clip-path: polygon(0% 0%, 0% calc(100% - 26px), calc(0% + 26px) 100%, 100% 100%, 100% 26px, calc(100% - 26px) 0%)

  +xs
    padding: 10px

  &:before
    content: ''
    position: absolute
    left: 0
    top: 0
    right: 0
    bottom: 0
    background: $black
    transition: all ease 0.2s
    clip-path: polygon(0% 0%, 0% calc(100% - 36px), calc(0% + 36px) 100%, 100% 100%, 100% 36px, calc(100% - 36px) 0%)

    +sm
      clip-path: polygon(0% 0%, 0% calc(100% - 26px), calc(0% + 26px) 100%, 100% 100%, 100% 26px, calc(100% - 26px) 0%)

    +xs
      left: 1px
      top: 1px
      right: 1px
      bottom: 1px

  &__photo
    position: relative
    width: 100%
    margin-bottom: 14px
    display: flex
    flex-direction: column

    +xs
      margin-bottom: 23px

    img
      display: block
      position: relative
      aspect-ratio: 1/1
      left: 0
      width: 100%
      height: 100%
      object-fit: cover
      filter: grayscale(100%)
      clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 30px, calc(100% - 30px) 0%)

  &__popup-btn-wrap
    width: 100%
    height: 100%
    position: relative

  &__popup-btn
    display: flex
    align-items: center
    justify-content: center
    font-size: 14px
    position: absolute
    left: 50%
    top: 50%
    font-weight: 500
    transform: translate(-50%, -50%)
    width: 88px
    height: 88px
    // border-radius: 50%
    border: 2px solid $themeColor
    +bold
    font-weight: 500
    color: $themeColor
    background: rgba(0, 0, 0, 0.5)
    transition: all ease 0.2s
    box-shadow: 0 0 0 0 #fff

  &__tag
    position: absolute
    font-weight: 500
    left: 10px
    top: 10px
    background: var(--tagBG)
    padding: 4px 12px
    font-size: 14px
    line-height: 1.8
    clip-path: polygon(0 0, 0 calc(100% - 10px), 10px 100%, 100% 100%, 100% 10px, calc(100% - 10px) 0)

    +xs
      top: 3px
      left: 3px
      font-size: 12px
      padding: 2px 10px

  &__expertise
    margin: 12px 0 12px
    position: relative
    line-height: 1.62

  &__name
    +bold
    font-weight: 500
    font-size: 24px
    margin-bottom: 5px
    letter-spacing: 0.65px
    overflow: hidden
    text-overflow: ellipsis
    position: relative
    +xs
      font-size: 20px

    a
      color: $white

  &__talk
    margin: 12px 0 12px
    line-height: 1.48
    font-weight: 700
    position: relative

    span
      font-weight: 500
      color: $gray

  &__company
    margin-bottom: 11px
    position: relative
    line-height: 1.48
    color: $themeColor
    +xs
      font-size: 14px

  &__desc
    color: $gray
    font-size: 12px
    font-weight: 600
    line-height: 1.68
    min-height: 60px
    position: relative

    &:after
      content: ''
      position: absolute
      left: 0
      right: 0
      bottom: 0
      height: 48px
      background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, $black 100%)

    p
      word-wrap: break-word
      overflow: hidden
      text-overflow: ellipsis
      display: -webkit-box
      -webkit-line-clamp: 4
      -webkit-box-orient: vertical

      &:not(:first-child)
        display: none

    +sm
      color: #aaaaaa
      font-size: 13px
    +xs
      font-size: 12px
    a
      color: #bdbdbd
      text-decoration: none
      &:hover
        text-decoration: underline

  &__socials
    z-index: 2
    position: absolute
    display: flex
    right: 0px
    bottom: 0px

  &__social-link
    height: 40px
    width: 40px
    background: $mainBg
    display: flex
    position: relative
    align-items: center
    justify-content: center
    &:hover, &:focus-visible
      z-index: 2
      background: $black
      .icon
        fill: $white
    .icon
      transition: 0.1s
      width: 18px
      height: 18px
      fill: $themeColor
    .no-touch &:hover
      .icon
        fill: $themeColor2

  &--mc
    .speaker
      &__photo
        width: 179px
        padding-top: 179px
        margin: 0 auto 59px
        &:after
          pointer-events: none
          content: ''
          position: absolute
          top: 49%
          left: 50%
          transform: translate(-50%, -50%)
          width: 235px
          height: 235px
          background-size: contain
          background-position: center
          background-repeat: no-repeat
          background-image: url(../img/mc-decor.png)
      &__photo-wrap
        border-radius: 50%
        +coverdiv
        overflow: hidden

  .activity-holder
    position: absolute
    transition: all 150ms ease
    top: 0
    left: 0
    right: 0
    bottom: 0
    padding: 0
    background-color: rgba(0, 0, 0, 0.5)
    opacity: 0
    transition: all ease 0.2s
    cursor: pointer
    z-index: 2
    clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 30px, calc(100% - 30px) 0%)
    &:hover, &:focus-visible
      outline: none !important
      opacity: 1
    +xs
      padding: 15px

    a
      color: $white
      opacity: 0.7
      margin: 18px 0 0
      display: inline-block
      text-decoration: none

      &:hover
        opacity: 1

    .slider
      position: relative
      width: auto
      height: 100%
      z-index: 1
      .s-item__col
        text-align: left
        width: unset
        padding: 0
        padding-left: 0
        padding-right: 0
        +sm
          font-size: 12px
          padding-top: 0
      .s-item__text
        font-size: 12px
        line-height: 1.3
      .slider__title
        font-size: 16px
        margin-bottom: 20px
        min-height: 28px
        display: none
        +sm
          font-size: 12px
          margin-bottom: 4px
          min-height: unset
      .s-item__title
        +sm
          font-size: 14px

      .icon-lightning
        margin: 0px 0 -3px
        fill: #888
        width: 15px
        height: 15px

.hosts
  position: relative
  padding: 80px 0 80px
  background-position: center top
  background-repeat: repeat
  background-image: url(../img/bg-net.svg)
  border-bottom: 2px solid #1d201e

  // &:after
  content: ''
  position: absolute
  left: 0
  right: 0
  bottom: -8px
  height: 15px
  background-image: url(../img/bg-dash.svg)
  z-index: 1

  +xs
    padding: 40px 0 40px
    //margin-top: 20px

.mc
  position: relative
  padding-top: 102px
  background-position: center top
  background-repeat: repeat

  +xs
    padding-top: 38px
    //margin-top: 20px

.mc-list
  display: flex
  justify-content: center
  flex-wrap: wrap
  margin: 0 -19px
  +xs
    padding-top: 20px
  &__item
    position: relative

    +xs
      margin: 0 auto
    &:not(:last-child)
      margin-right: 45px
      +sm
        margin-right: auto
        margin-bottom: 79px

  .speaker

    &__desc

    p
      overflow: visible
      text-overflow: ellipsis
      display: block
      -webkit-line-clamp: none
      -webkit-box-orient: vertical

      &:not(:first-child)
        display: none

